--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
+thead {
+  background-color: #007bff;
+  color: white;
+}
+
+.container {
+  margin-top: 40px;
+}
+
 .clickable {
   cursor: pointer;
 }
 
 .company {
   color: #007bff;
+}
+
+.grey {
+  background-color: #f1f1f1;
 }
